Vector UI widget clips when zooming in #65306

Closed
opened 2019-05-30 14:32:14 +02:00 by William Reynish · 9 comments

System Information
Operating system: Darwin-18.2.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon R9 M395X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.4.10

Blender Version
Broken: version: 2.80 (sub 73), branch: master, commit date: 2019-05-30 05:33, hash: 8cc1154aa2
Worked: Blender 2.79

Short description of error
Zoom in on the a vector UI widget in the Shader Editor and notice it gets clipped_

Exact steps for others to reproduce the error

  • Open the Shading Workspace
  • Add a Normal node
  • zoom in as far as you can go

Screenshot 2019-05-30 at 14.26.22.png

**System Information** Operating system: Darwin-18.2.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon R9 M395X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.4.10 **Blender Version** Broken: version: 2.80 (sub 73), branch: master, commit date: 2019-05-30 05:33, hash: `8cc1154aa2` Worked: Blender 2.79 **Short description of error** Zoom in on the a vector UI widget in the Shader Editor and notice it gets clipped_ **Exact steps for others to reproduce the error** - Open the Shading Workspace - Add a Normal node - zoom in as far as you can go ![Screenshot 2019-05-30 at 14.26.22.png](https://archive.blender.org/developer/F7079970/Screenshot_2019-05-30_at_14.26.22.png)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

#66406 was marked as duplicate of this issue

#66406 was marked as duplicate of this issue

Added subscribers: @CarlG, @lichtwerk, @brecht

Added subscribers: @CarlG, @lichtwerk, @brecht

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

Is this still issue? can not repro.

Is this still issue? can not repro.

This issue was referenced by 3dde6360ff

This issue was referenced by 3dde6360ff6ae002002472f7b5a155e3d119230f

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Campbell Barton self-assigned this 2020-02-04 12:21:10 +01:00

Seems to have been fixed. Tried on both Win10 and Linux.

Seems to have been fixed. Tried on both Win10 and Linux.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65306
No description provided.