Fix T65306: UI widgets clipped when scaled up

Normal UI widget and 3D navigation gizmo where clipping at high DPI.